# ec_study

./: CMakeLists.txt  README.md  package.xml
config/: ethercat_config.yaml
src/: motor_control_node.cpp  motor_info_node.cpp
