<?xml version="1.0"?>
<package format="2">
  <name>ec_study</name>
  <version>0.0.1</version>
  <description>EtherCAT study package for controlling motor drivers</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>ethercat_driver_ros2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

